tests/fixtures/invalid_semantic/invalid_chain.syn
ITEM @ref2020
    quote: "Quote"
    chain: A -> UNKNOWN -> B
END ITEM
